# finance-categorizer

./: README.md
backend/: README.md  config.py  docling_example.py  main.py  pyproject.toml  worker.py
backend/agents/: transaction_categorizer_agent.py
backend/clients/: ynab_client.py
backend/models/: amazon.py  budget.py
backend/repos/: amazon_repo.py  budget_repo.py
backend/services/: amazon_service.py  transaction_service.py  ynab_service.py
frontend/: package-lock.json
